Implemented command line args, consumer threads, looping for multiple face images

--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -145,6 +145,9 @@ The software must be able to complete the above task in the same time or less th
 \subsubsection{Documentation}
 The software should have at a minimum a man page and usage information. More documentation would be beneficial.
 
+\subsubsection{Testing}
+The software will be tested using a comination of \todo{Include final list of databases}
+
 \subsection{Non-functional Requirements}
 \subsubsection{Accuracy}
 The software should have a \textit{relatively} high success rate when identifying a person from a social media collection. Note that typical facial reocgnition performance in unconstrained environments achieve a maximum success rate of ~30\%.
@@ -163,6 +166,20 @@ The software is being developed for use by information security professionals in
 
 
 \section{Implementation}
+
+
+
+
+\todo{Keep or remove this}
+\section{Challenges}
+\todo{Loading from mem rather than filesys}
+\todo{Maximum loaded images}
+\todo{Results from thread mutable object Deque}
+\todo{Multiple workers for producing/consuming}
+
+
+
+
 \section{Testing}
 \section{Results}
 \section{Evaluation}
