--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,3 @@
 New dataset by modifying images (radndomly) overlay image over background with xfroms (rotate, noise, scale, alpha) overlay with primitives to simulate occlusion
+
+Write about nginx
