Removed redundant imports, added todos in report

--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -171,14 +171,17 @@ The software will be tested using a comination of \todo{Include final list of da
 
 
 
-\todo{Keep or remove this}
 \section{Challenges}
 \todo{Loading from mem rather than filesys}
 \todo{Maximum loaded images}
-\todo{Results from thread mutable object Deque}
+\todo{Results from thread sortedlist}
 \todo{Multiple workers for producing/consuming}
 \todo{Remote image fetching using PIL}
 \todo{Command line args}
+\todo{Multiple queues}
+\todo{Sentinels}
+\todo{Multiple face images}
+
 
 
 
