--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -5,6 +5,30 @@
 \usepackage[toc,page]{appendix}
 \usepackage{pdfpages}
 \usepackage{graphicx}
+
+\usepackage{listings}
+\usepackage{color}
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{mauve}{rgb}{0.58,0,0.82}
+
+\lstset{frame=tb,
+  language=Python,
+  aboveskip=3mm,
+  belowskip=3mm,
+  showstringspaces=false,
+  columns=flexible,
+  basicstyle={\small\ttfamily},
+  numbers=none,
+  numberstyle=\tiny\color{gray},
+  keywordstyle=\color{blue},
+  commentstyle=\color{dkgreen},
+  stringstyle=\color{mauve},
+  breaklines=true,
+  breakatwhitespace=true,
+  tabsize=3
+}
+
 \bibliographystyle{agsm}
 
 \begin{document}
@@ -115,9 +139,6 @@ The software should be able to function without a GUI, since the requirement of 
 \subsubsection{Multithreaded}
 Where applicable, the software should make full use of parallelisation to increase its speed and resource utilisation. This is particularly important when working with large data sets.
 
-\subsubsection{Deployment}
-The software should make use of packaging systems, notably pip, to allow for easy deployment.
-
 \subsection{Non-functional Requirements}
 \subsubsection{Accuracy}
 The software should have a \textit{relatively} high success rate when identifying a person from a social media collection. Note that typical facial reocgnition performance in unconstrained environments achieve a maximum success rate of ~30\%.
@@ -152,7 +173,21 @@ The software will be tested using a comination of \todo{Include final list of da
 
 \section{Implementation}
 \subsection{Face Recognition}
-\todo{Talk about face recog libraries}
+\todo{Talk about face recog library as well as why chose that one}
+\subsection{Test Server}
+\todo{Talk about nginx vs others}
+\todo{Talk about python webserver}
+\todo{Talk about dynamic json generation}
+\subsection{Portable Module}
+\todo{Talk about split between module and run.py}
+\subsection{Threading}
+\todo{Talk about control from main thread}
+\todo{Talk about prod/con}
+\subsection{Headless}
+\todo{Talk about cmd line args}
+\todo{Talk about results}
+\subsection{Social Network Interactivity}
+\todo{Talk about mirrored structure}
 
 \subsection{Challenges}
 \subsubsection{Loading Images from Memory}
@@ -160,8 +195,40 @@ Since the application retrieves images remotely over the internet, it makes sens
 
 Unfortunately the face recognition library does not support loading images from memory, instead providing a method (load\_image\_file(uri)) to load images from the local file system. Upon inspection this method loads an image file from disk in to a Python Imaging Library (PIL) Image object, then casts it to a numpy array to allow for encoding operations. To mirror this method for use with images loaded to memory, the application uses the PIL Image.open() method on the raw response stream from the social network web server to create an Image object, then casts it to a numpy array. This achieves the same result as loading the image from the local file system significantly more efficiently.
 
+\begin{lstlisting}
+# Load an image in to memory from local or remote sources
+def load_images(uri, remote=True):
+    if remote:
+        print('Retrieving image from ' + uri)
+        resp = requests.get(uri, stream=True)
+        resp.raw.decode_content = True
+        img = Image.open(resp.raw)
+        return fr.face_encodings(numpy.array(img))
+    else:
+        print('Retrieving image from ' + uri)
+        img_array = fr.load_image_file(uri)
+    return fr.face_encodings(img_array)
+\end{lstlisting}
+\textit{Above: A function with an optional keyword parameter to load an image from either a local or remote source.}
+
 \subsubsection{Maximum Loaded Images}
-A potential problem when using the producer / consumer model is that producers may produce too much data, filling all available memory and leading to a crash. To solve this, a maximum loaded images parameter can be supplied when running the application, which will cap the number of face encodings loaded into memory at that number. 
+A potential problem when using the producer / consumer model is that producers may produce too much data, filling all available memory and leading to a crash. To solve this, a maximum loaded images parameter can be supplied when running the application, which will cap the number of face encodings loaded into memory at that number. This has been implemented using a semaphore initialise with the maximum number of face encodings to be loaded. Each producer thread calls acquire() before loading a set of encodings in to memory, and each consumer thread calls release() when the encoding has been compared and the memory can be freed.
+
+\begin{lstlisting}
+# Producer thread
+		self.waiting_counter.acquire()
+            if profile_queue.empty():
+                return
+            profile = profile_queue.get()
+            
+# Consumer thread
+            img = img_queue.get()
+            ---
+            Comparison happens here
+            ---
+			self.counter.release()
+\end{lstlisting}
+\textit{Above: The producer thread calls acquire() on the semaphore before loading mappings in to memory, and the consumer thread calls release() on the semaphore after the memory used for mappings has been freed.}
 
 \subsubsection{Multiple Threads for Producing and Consuming}
 As it stands, the application has been developed with mulitple threads in mind. The user can define how many threads should be used for downloading images and producing face mappings via the --cthreads argument, and how many threads should be used to compare face mappings via the --pthreads argument. This allows for much higher processor utilisation than a single threaded application, as all CPU cores can be utilised.
@@ -171,13 +238,48 @@ While the application processes images orders of magnitude faster than it would 
 \subsubsection{Thread Object Access Control}
 To control object access between threads two Queue objects are used. One contains a JSON representation of all of the profiles in the search spaces and is only accessed by the producer threads, and the other is used by producer threads to send face mappings of profiles to consumer threads. These objects are guaranteed to be threadsafe, meaning that both the put() and get() operations are atomic. To control access to the result object that multiple consumer threads may try to access, a Lock() is passed in the consumer constructor. Before a consumer accesses the result object it must first call lock.acquire() which will block if another thread has acquired the lock first. After a consumer has finished writing to the result object it releases the lock by calling lock.release(), allowing other consumer threads access.
 
+\begin{lstlisting}
+				self.result_lock.acquire()
+                self.result.add([distance, img[1]])
+                self.result_lock.release()
+\end{lstlisting}
+\textit{Above: The result object is not thread-safe, so must have a lock around it.}
 
+\subsubsection{Result Retrieval}
+Having a "top 5" result as was initially planned would require many comparison and list traversal operations. It would also make having multiple consumers pointless, as only one thread would be able to do comparisons at a time. Rather than having the top 5 matches, the result returned is now all faces that match the test face within a given threshold (by default, face value < 0.3).
 
-\todo{Results from thread sortedlist}
-\todo{Command line args}
-\todo{Multiple queues}
-\todo{Sentinels}
-\todo{Multiple face images}
+\subsubsection{Command Line Arguments}
+The application can take many command line arguments to customise its use. Having the user fill out and remember every one of these arguments would make the application unintuituve and difficult to use. Therefore, the decision was made to make heavy use of optional keyword arguments both when running the program (e.g. --cthreads=1) and in functions within the application. This allows the user to specify some, all, or none of the optional parameters and still have the application function correctly. 
+
+\begin{lstlisting}
+def search(test_face_location,
+           uri,
+           no_producer_threads=None,
+           no_consumer_threads=None,
+           max_loaded=None,
+           threshold=None,
+           name=None):
+\end{lstlisting}
+\textit{Above: The search function uses several keyword arguments with default arguments, then checks and loads with defaults if not supplied before continuing.}
+
+\subsubsection{Inter-Thread Communication}
+The only inter-thread communication required by the application is for the consumer threads to be signalled when there are no more face mappings to compare. To this end, the main thread which spawns both the producer and consumer threads blocks by calling producer.join() on all producer threads. One all producer threads have returned, the main thread pushes a sentinel object on to the end of the face mapping queue. It then blocks by calling consumer.join() on all consumer threads. Once a consumer thread pops the sentinel object, it adds another sentinel to the end of the queue (for further consumer threads to consume) then returns. This guarantees that there is no unconsumed data, and that the consumer threads do not terminate prematurely.
+
+\begin{lstlisting}
+	# Main thread
+    for processor in processor_list:
+        processor.join()
+    img_queue.put(sentinels.NOTHING)
+
+    for recogniser in recogniser_list:
+        recogniser.join()
+        
+    # Consumer thread
+    if img == sentinels.NOTHING:
+        img_queue.put(sentinels.NOTHING)
+        return
+\end{lstlisting}
+\textit{Above: The main thread blocks until all producer threads are finished, then pushes a sentinel object to the end of the queue, then blocks until all consumer threads are finished.}
 
 \section{Testing}
 \section{Results}
