Added information gathering section to lit. review

--- a/doc/report/citations.bib
+++ b/doc/report/citations.bib
@@ -343,3 +343,11 @@ howpublished = {Published in the Guardian newspaper}
   publisher={IEEE}
 }
 
+@article{socmintlawenforcement,
+  title={Social Media Surveillance and Law Enforcement},
+  author={Mateescu, Alexandra and Brunton, Douglas and Rosenblat, Alex and Patton, Desmond and Gold, Zachary and Boyd, Danah},
+  journal={Data Civil Rights, October},
+  volume={27},
+  pages={2015--1027},
+  year={2015}
+}
