--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -36,6 +36,9 @@
 \author{Jack Neilson}
 \maketitle
 \newpage
+\tableofcontents
+\newpage
+
 \section{Literature Review}
 \subsection{Background}
 \subsubsection{SOCMINT}
@@ -61,10 +64,6 @@ Facial recognition is also enjoying a heavy amount of attention from the securit
 \subsubsection{Constrained vs Unconstrained}
 While facial recognition software has come a long way, achieving accuracy rates of up to 99\% on small, consistent data sets \citep{facialrecogidentifyingpoi}, it is still in it's infancy when it comes to identifying people in "unconstrained" images. Images taken in the wild may have large variations in pose, facial occlusion and ambient lighting. This makes it difficult to identify facial features or markers (such as iris distinace, nasal distance, blemishes) which in turn has a negative impact on accuracy rates \citep{unconstrainedfacialrecogbenchmark}. When looking at applications of face recognition software with unconstrained datasets, matches are typically achieved when the test image has similar pose, facial occlusion and lighting as the sample image (See appendix \ref{appendix:bostonbomber}).
 
-\todo{Do stuff here}
-\subsection{Theory}
-\subsubsection{Prior Work}
-
 \subsection{Prior Knowledge Attacks}
 \subsubsection{Social Engineering}
 Social engineering in the context of information security refers to the ability of a person to gain access to information or control systems through a user or administrator, rather than through any technical oversight \citep{socialengineeringvulnerabilites}. It is a popular technique against "hardened" targets as technical prevention measures have proven to be ineffective \citep{advancedsocialengineering} making the human users and administrators the weakest link in the proverbial chain. In addition, it is difficult to train users in defenses against social engineering attacks. People believe they would not fall for such a trick despite research showing that humans perform poorly when attempting to detect deception \citep{advancedsocialengineering}\citep{socialengineeringvulnerabilites}. 
@@ -82,6 +81,8 @@ Spearphish attacks in particular are difficult to mitigate against. They target 
 
 \subsection{Intelligence Gathering}
 \subsubsection{SOCMINT}
+Social media intelligence (SOCMINT) refers to information gathered from social media profiles hosted on social networks. It is an emergent field in open-source intelligence (OSINT), which relies on gathering information users divulge about themselves in the public domain. It is characterised by the massive amount of data available \citep{socmintoverview} and the difficulty of analysis \citep{socmintlitreview}. An overview of subjects relating to social media intelligence gathering follows below.
+
 \subsubsection{HUMINT}
 Human intelligence (HUMINT) pertains to the gathering of intelligence from individual human subjects. Information may be divulged non-consensually e.g. in the case of interrogation \citep{criminalvshumint}, or consensually in the case of clandestine information gathering \citep{clandestinehumint}. 
 
@@ -92,31 +93,48 @@ Consensual information gathering sits in a much more grey area. Presenting yours
 Using a human intelligence approaches when gathering information has several downsides. It is a high risk strategy, as should a person be found out the consequences can be severe \citep{humintni}. The potential reward of sensitive information may be deemed to not be worth the risk. It goes without saying that HUMINT does not scale particularly well - it is a useful tool when attempting to extract information from a single person or small group, but it is much less useful when gathering information about larger groups. It relies on trust being built and may be ineffective when attempting to gather information from targets trained in tradecraft \citep{humintni}\citep{clandestinehumint}\citep{humintcyberage}.
 
 \subsubsection{Individual vs Group Data}
+Much of the research done on social media intelligence has focused on group trends or finding subsets of a population \citep{socmintpublicsafety}\citep{socmintoverview}. Comparatively, fairly little research has been done on identifying a single person of interest from a social network service.
+
+A practical example of where SOCMINT has been used in the real world is the framework created by Kandias and Stavrou, in which features of a social media profile such as number of friends, "friend hops" standard deviation, psychiatric profiling and usage intensity are used to predict groups of interest that may become radicalised \citep{behaviourdetection}. While this is certainly very useful, it focuses more on identifying groups by some common factor rather than identifying a single person of interest for further analysis.
 
 \subsubsection{Quantity of Information}
+Having limited information is not a problem when gathering social media intelligence. Rather, the opposite is true - 250,000,000 photos are added to Facebook every day \citep{socmintoverview}. The vast amount of data is what makes searching for social media so difficult (and nigh on impossible in real time).
+
+While the total amount of data added to social networking websites is extremely large, the information about a single user may be fairly small especially if the user has been trained to release as little information as possible \citep{behaviourdetection}. This may make targeting single persons of interest less valuable, however should information "leakage" occur the potential payoff is high. It should be remembered that scanning social media profiles incurs little to no risk, something that cannot be said of human intelligence.
 
 \subsubsection{Accessibility of Data}
+As discussed previously the amount of data pushed to social networking websites is massive. This does not mean that all social networking data is readily accessible. Users may set privacy settings to disallow unauthorised parties from viewing their profile, or particular parts of it. This can be mitigated by having the service allow access, however acquiring access as a party of one may prove difficult.
+
+Several social networking services also impose rate limits on their interfaces (for example, Facebook imposes a limit of 100 API calls per user of an application as well as limits on CPU time used). These limits obviously make searching through the entire data set of profiles unfeasible without allowances made on the side of the social network. 
 
 \subsubsection{Uses}
-\todo{PRISM}
+Usage of social media intelligence has been limited in large part due to the difficulty in analysing such large amounts of data for small snippets of useful information \citep{socmintoverview}. There are, however, some interesting case studies available.
+
+In April 2013, Edward Snowden leaked a deck of slides used by the NSA to brief people on the "PRISM" program \citep{prismslides}. These slides detailed how the NSA uses mass surveillance with cooperation from companies including Google, Facebook, and Apple, to conduct surveillance against persons of interest. As a government agency enabled by the oversight committee, the NSA has the power to require large social networking services like the ones listed to allow them access to their data.
+
+As mentioned previously, Kandias and Stavrou have developed a framework for using social media intelligence for predicting and mitigating insider threats while working at the Information Security and Critical Infrastructure Protection Lab at the University of Athens \citep{behaviourdetection}. The framework focuses on analysing the psychology of the subjects using their social media posting habits. It shows that seemingly inconsequential data such as posting frequency may still be useful when analysing social media intelligence. An example graph to find the amount of "klout" a social media user may have in the Nereus framework is referenced in Appendix \ref{appendix:connectiongraph}.
 
 \subsubsection{Challenges and Constraints}
+There are several challenges to consider when collecting and analysing data for social networking services. First is the issue of privacy. Many people see social media profiles in a similar setting as a meeting between friends, and as such post things which they perhaps would not say or show in public \citep{socialmediacontent}. The chilling effect of public scrutiny, or even direct surveillance, does not seem to put a damper on this.
 
+There are some that feel that police surveillance of social networks is too pervasive \citep{socmintlawenforcement}, and encroaches on their right to privacy. Despite the effectiveness of social media intelligence gathering, it may be harmful to law enforcement's public image if it continues to utilise SOCMINT.
 
-
-
+As far as the law is concerned, information posted on social networking sites is considered to be in the public domain. This makes it legal for law enforcement to gather social media intelligence, provided they do it the same way an unprivileged user would. Several social networks have clauses against mass data collection in their Terms of Service, however it is theorised that this is to prevent competition from other companies when selling said information to advertisers.
 
 \subsection{Facial Recognition}
 \subsubsection{Current Applications}
-
-\subsubsection{State of the Art}	
-
-\subsubsection{Challenges}
-
-\subsubsection{Recent Advances}
+\todo{Police face recog}
+\todo{Facebook}
+\todo{Find more}	
 
 \subsubsection{Unconstrained Facial Recognition}
 
+\subsubsection{Challenges}
+\todo{Training sets}
+\todo{Unconstrained}
+\todo{Images for comparison}
+
+\subsubsection{Recent Advances}
 
 
 \newpage
@@ -168,9 +186,9 @@ The software must be able to complete the above task in the same time or less th
 The software should have at a minimum a man page and usage information. More documentation would be beneficial.
 
 \subsubsection{Testing}
-The software will be tested using a comination of \todo{Include final list of databases}
+The software will be tested using a comination of publicly available face recognition datasets including Labeled Faces in the Wild, the CMU Face in Action database, and the SCFace database. \todo{Include final list of databases}
 
-
+\newpage
 \section{Implementation}
 \subsection{Face Recognition}
 \todo{Talk about face recog library as well as why chose that one}
@@ -212,7 +230,7 @@ def load_images(uri, remote=True):
 \textit{Above: A function with an optional keyword parameter to load an image from either a local or remote source.}
 
 \subsubsection{Maximum Loaded Images}
-A potential problem when using the producer / consumer model is that producers may produce too much data, filling all available memory and leading to a crash. To solve this, a maximum loaded images parameter can be supplied when running the application, which will cap the number of face encodings loaded into memory at that number. This has been implemented using a semaphore initialise with the maximum number of face encodings to be loaded. Each producer thread calls acquire() before loading a set of encodings in to memory, and each consumer thread calls release() when the encoding has been compared and the memory can be freed.
+A potential problem when using the producer / consumer model is that producers may produce too much data, filling all available memory and leading to a crash. To solve this a maximum loaded images parameter can be supplied when running the application, which will cap the number of face encodings loaded into memory at that number. This has been implemented using a semaphore initialised with the maximum number of face encodings to be loaded. Each producer thread calls acquire() before loading a set of encodings in to memory, and each consumer thread calls release() when the encoding has been compared and the memory can be freed.
 
 \begin{lstlisting}
 # Producer thread
@@ -246,7 +264,7 @@ To control object access between threads two Queue objects are used. One contain
 \textit{Above: The result object is not thread-safe, so must have a lock around it.}
 
 \subsubsection{Result Retrieval}
-Having a "top 5" result as was initially planned would require many comparison and list traversal operations. It would also make having multiple consumers pointless, as only one thread would be able to do comparisons at a time. Rather than having the top 5 matches, the result returned is now all faces that match the test face within a given threshold (by default, face value < 0.3).
+Having a "top 5" result as was initially planned would require many comparison and list traversal operations. It would also make having multiple consumers pointless, as only one thread would be able to do comparisons at a time. Rather than having the top 5 matches, the result returned is now all faces that match the test face within a given threshold (by default, face value $<$ 0.3).
 
 \subsubsection{Command Line Arguments}
 The application can take many command line arguments to customise its use. Having the user fill out and remember every one of these arguments would make the application unintuituve and difficult to use. Therefore, the decision was made to make heavy use of optional keyword arguments both when running the program (e.g. --cthreads=1) and in functions within the application. This allows the user to specify some, all, or none of the optional parameters and still have the application function correctly. 
@@ -298,8 +316,13 @@ Graph of insider threat factors \citep{behaviourdetection}.
 
 \section{"Boston Bomber" Identification}
 \label{appendix:bostonbomber}
-\includegraphics[width=\linewidth]{res/boston_bomber.png}
+\includegraphics[scale=0.8]{res/boston_bomber.png}
 Table of potential matches, note the correct identification from the picture taken from social media with similar pose and lighting \citep{bostonbombingcasestudy}.
+
+\section{Connection Graph}
+\label{appendix:connectiongraph}
+\includegraphics[width=\linewidth]{res/connection_klout.png}
+Graph of social media connections and klout score in the Nereus framework\citep{behaviourdetection}.
 
 \end{appendices}
 \end{document}
