Added section on facial recognition

--- a/doc/report/citations.bib
+++ b/doc/report/citations.bib
@@ -351,3 +351,18 @@ howpublished = {Published in the Guardian newspaper}
   pages={2015--1027},
   year={2015}
 }
+
+@article{policefacerecog,
+author={Paul Gallagher},
+title={Download Festival: Facial recognition technology used at event could be coming to festivals nationwide},
+journaltitle={The Independant},
+year={2005}
+}
+
+@misc{facebookfacerecog,
+    author = "{Facebook}",
+    title = {{How does Facebook suggest tags?}},
+    howpublished = {\url{https://www.facebook.com/help/122175507864081?helpref=faq_content}},
+    note = {Online; accessed 2nd March 2018} ,
+    year=2018,
+}
