--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -5,6 +5,7 @@
 \usepackage[toc,page]{appendix}
 \usepackage{pdfpages}
 \usepackage{graphicx}
+\usepackage{url}
 
 \usepackage{listings}
 \usepackage{color}
@@ -123,18 +124,28 @@ As far as the law is concerned, information posted on social networking sites is
 
 \subsection{Facial Recognition}
 \subsubsection{Current Applications}
-\todo{Police face recog}
-\todo{Facebook}
-\todo{Find more}	
+Police and military uptake of face recognition technology is widespread. For instance, police in the United Kingdom recently used cameras to scan people's faces at the "Download" music festival \citep{policefacerecog}. These images were then compared with a database of custody images across Europe, to identify known criminals for the purposes of crime prevention and outstanding warrant execution.
+
+Facebook also uses face recognition on photos uploaded to its service \citep{facebookfacerecog}. By comparing face mappings to the known face mappings of yourself and immediate friends, it can suggest "tags" of who is in the image which presumably makes the information contained within the image more valuable to advertisers.
 
 \subsubsection{Unconstrained Facial Recognition}
+Unconstraned facial recognition is a subset of facial recognition which focuses on identifying faces in images with variations in pose, lighting, and facial occlusion. It is significantly more difficult than facial recongition which imposes constraints on these conditions.
+
+Unconstrained facial recognition is typically used in situations where a subject is unaware or unwilling. As already mentioned, it was used in a case study by Klontz and Jain where they compared the images released by the FBI of Tamerlan and Dzhokhar Tsarnaev (the "Boston Bombers"). They found that by comparing the released images taken from security cameras to images on social media in an unconstrained setting, they could positively identify one of the brothers \citep{bostonbombingcasestudy} (see Appendix \ref{appendix:bostonbomber}).
 
 \subsubsection{Challenges}
 \todo{Training sets}
+
+
 \todo{Unconstrained}
+
+
 \todo{Images for comparison}
 
+
+
 \subsubsection{Recent Advances}
+\todo{Write some shit here}
 
 
 \newpage
