Small changes to demo watcher

--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -40,6 +40,7 @@
 \tableofcontents
 \newpage
 
+\todo{Talk about existing systems, gaps, how filled}
 \section{Literature Review}
 \subsection{Background}
 \subsubsection{SOCMINT}
@@ -133,7 +134,6 @@ Unconstraned facial recognition is a subset of facial recognition which focuses 
 
 Unconstrained facial recognition is typically used in situations where a subject is unaware or unwilling. As already mentioned, it was used in a case study by Klontz and Jain where they compared the images released by the FBI of Tamerlan and Dzhokhar Tsarnaev (the "Boston Bombers"). They found that by comparing the released images taken from security cameras to images on social media in an unconstrained setting, they could positively identify one of the brothers \citep{bostonbombingcasestudy} (see Appendix \ref{appendix:bostonbomber}).
 
-
 \newpage
 \section{Methodology}
 \subsection{Overview}
@@ -184,6 +184,8 @@ The software should have at a minimum a man page and usage information. More doc
 
 \subsubsection{Testing}
 The software will be tested using a comination of publicly available face recognition datasets including Labeled Faces in the Wild, the CMU Face in Action database, and the SCFace database. \todo{Include final list of databases}
+
+\todo{Talk about languages, other choices}
 
 \newpage
 \section{Implementation}
@@ -338,6 +340,7 @@ Graph of social media connections and klout score in the Nereus framework\citep{
 
 \section{Command Line Arguments}
 \label{appendix:commandlineargs}
+\todo{Update with new image}
 \includegraphics[width=\linewidth]{res/facegather_cmd_line_args.png}
 A help page showing the command line arguments that can be supplied.
 
