--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 \usepackage[margin=30mm]{geometry}
 \usepackage[comma]{natbib}
 \usepackage{todonotes}
