Added current solutions and missing functionality section to lit. review of report

--- a/doc/report/citations.bib
+++ b/doc/report/citations.bib
@@ -366,3 +366,27 @@ year={2005}
     note = {Online; accessed 2nd March 2018} ,
     year=2018,
 }
+
+@misc{pipl,
+    author = "{pipl}",
+    title = {{pipl home page}},
+    howpublished = {\url{https://pipl.com/}},
+    note = {Online; accessed 13th March 2018} ,
+    year=2018,
+}
+
+@misc{facebookpeoplesearch,
+    author = "{Facebook}",
+    title = {{Facebook People Search Page}},
+    howpublished = {\url{https://www.facebook.com/people-search.php}},
+    note = {Online; accessed 13th March 2018} ,
+    year=2018,
+}
+
+@misc{facebookgraphapi,
+    author = "{Facebook}",
+    title = {{Facebook Graph API Supporting Documents}},
+    howpublished = {\url{https://developers.facebook.com/docs/graph-api/}},
+    note = {Online; accessed 13th March 2018} ,
+    year=2018,
+}
