Added UML diagram

--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -331,9 +331,18 @@ The only inter-thread communication required by the application is for the consu
 \end{lstlisting}
 \textit{Above: The main thread blocks until all producer threads are finished, then pushes a sentinel object to the end of the queue, then blocks until all consumer threads are finished.}
 
+\subsubsection{UML Diagram}
+\includegraphics[scale=1]{res/facegather_uml.png}
+
 \section{Testing}
+
+
 \section{Results}
+
+
 \section{Evaluation}
+
+
 \section{Conclusion}
 
 \newpage
